--- a/samples/index.html
+++ b/samples/index.html
@@ -16,7 +16,8 @@ title: samples
 </head>
 
 <body>
-<h2>Fictional Science</h2>
+<h2 class="taxonomy-title">Fictional Science</h2>
+	<p>Supporting the fantastical with a nugget of scientific truth, leading readers into a world hybrid world where anythings' possible..</p>
 <ul class="samples">
 <!--	<ul id="slider1">
   <li><img src="/images/1-6GShelmet.png" title="Groundbreaking Science: The Guide to Ki - Superhero Helmet" /></li>
@@ -30,7 +31,8 @@ title: samples
 	  {% endfor %}
 </ul>
 
-<h2>Science Communication</h2>
+<h2 class="taxonomy-title">Science Communication</h2>
+	<p>Engaging the public with science, shining a light on cutting edge research.</p>
 <ul class="samples">
 	  {% for sample in site.tags.sample %}
 	    	{% if sample.tags contains "scicomm" %}
