--- a/samples/index.html
+++ b/samples/index.html
@@ -17,7 +17,7 @@ title: samples
 
 <body>
 <h2 class="taxonomy-title">Fictional Science</h2>
-	<p>Supporting the fantastical with a nugget of scientific truth, leading readers into a world hybrid world where anythings' possible..</p>
+	<p>Supporting the fantastical with a nugget of scientific truth, leading readers into a world where anything's possible..</p>
 <ul class="samples">
 <!--	<ul id="slider1">
   <li><img src="/images/1-6GShelmet.png" title="Groundbreaking Science: The Guide to Ki - Superhero Helmet" /></li>
@@ -32,7 +32,7 @@ title: samples
 </ul>
 
 <h2 class="taxonomy-title">Science Communication</h2>
-	<p>Engaging the public with science, shining a light on cutting edge research.</p>
+	<p>Engaging all ages with science - shining a light on cutting-edge research and bringing it to within reach, where it should be.</p>
 <ul class="samples">
 	  {% for sample in site.tags.sample %}
 	    	{% if sample.tags contains "scicomm" %}
