--- a/samples/index.html
+++ b/samples/index.html
@@ -4,7 +4,7 @@ title: samples
 ---
 
 <body>
-<h2 class="category-title">Fictional Science</h2>
+<h2 class="collection-title">Fictional Science</h2>
 	<p>Supporting the fantastical with a nugget of scientific truth, leading readers into a world where anything's possible..</p>
 	<div class="entries-{{ page.entries_layout | default: 'list' }}">
 	  {%- for entry in site.tags.sample -%}
