--- a/samples/index.html
+++ b/samples/index.html
@@ -5,7 +5,7 @@ entries_layout: grid
 ---
 
 <body>
-<h2 class="collection-title">Fictional Science</h2>
+<h2 class="taxonomy-title">Fictional Science</h2>
 	<p>Supporting the fantastical with a nugget of scientific truth, leading readers into a world where anything's possible..</p>
 	<div class="entries-{{ page.entries_layout | default: 'list' }}">
 	  {%- for entry in site.tags.sample -%}
@@ -17,11 +17,11 @@ entries_layout: grid
 
 <h2 class="taxonomy-title">Science Communication</h2>
 	<p>Engaging all ages with science - shining a light on cutting-edge research and bringing it to within reach, where it should be.</p>
-<ul class="samples">
-	  {% for sample in site.tags.sample %}
-	    	{% if sample.tags contains "scicomm" %}
+	<div class="entries-{{ page.entries_layout | default: 'list' }}">
+	  {% for entry in site.tags.sample %}
+	    	{% if entry.tags contains "scicomm" %}
 	            {% include entry.html %}
 	        {% endif %}
 	  {% endfor %}
-</ul>
+	</div>
 </body>
