--- a/about/index.html
+++ b/about/index.html
@@ -4,18 +4,31 @@ title: About
 ---
 <div class="blurb">
   <p>
-    Lottie is a writer and illustrator with science communication firmly at the heart of her works.
+    Lottie is a writer and illustrator with science communication firmly at the heart of her work.
   </p>
 </div>
 
 <p>
-  She enjoys weaving together a mixture of real and invented science to create immersive works that can both introduce complex scientific theory and extend it into the fantastical. The blurrier the line in her fiction the better.
+  A trained scientist with an interdisciplinary background in physics, astronomy and neuroscience, Lottie discovered her appetite for science in sci-fi and fantasy, and thus knows first-hand the immense value these genres play in igniting public curiosity about research of all kinds.
 </p>
 
 <p>
-  A trained scientist with an interdisciplinary background, Lottie knows the value of sparking creativity [] and instilling the thirst for knowledge through mediums one would usually not encounter .  sparks creativity and encourages people to explore all kinds of science. After all, the truth is often far stranger and more wonderful than fiction!
+  Outside of more typical public engagement initiatives, she enjoys weaving together real and invented science to create immersive works that can both introduce complex scientific theories and extend them into the fantastical. The blurrier the line the better. She calls this 'fictional science'.
 </p>
 
 <p>
-  From fictional textbooks to blogging real research trips, Lottie takes a cross-media approach to sating the curiosity of her readers and followers across all skill levels.
+  From fantastical 'how-to' textbooks to blogging real research trips, Lottie takes a cross-media approach to sating the curiosity of her readers and followers across all skill levels.
+</p>
+
+<h3>Background</h3>
+
+<p>  
+  Growing up Lottie found in-Universe texts or stories with scientific or historical truth behind their world-building the most engaging; e.g. "Fantastic Beasts and Where to Find Them" and "Quidditch Through the Ages" by JK Rowling, the "His Dark Materials" series by Philip Pullman, the "Hitchhiker's Guide to the Galaxy" by Douglas Adams, "The Handmaid's Tale" by Margaret Atwood and "Watership Down" by Richard Adams to name a few. These stories encouraged her both to pursue an education in science and to create her own worlds inspired by the established rules and cutting-edge research she was immersed in.
+</p>
+
+<p>
+  Her education and work has taken her from an undergraduate in theoretical physics (with a final-year project in the social sciences), a Ph.D. in astronomy then to postdoctoral work in neuroscience. With this background she found a deep appreciation of scientific research of all types. 
+</p>
+<p>
+  It was during her Ph.D. she discovered the best fun to be had was teaching and showcasing research to the young and old, science dabblers and 'nerds' alike. She kept an astronomy blog about her research, attended numerous school and local events and participated as a creative writer in the "Hogwarts is Here" Harry Potter online community project. From there she's gone on to speak at Soapbox Science, write and illustrate "Groundbreaking Science: The Guide to Ki" - a "how-to" fan textbook for Dragon Ball, and draw companion pieces for fellow scientists' publications.
 </p>
