--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: collection
 title: home
 entries_layout: list
-image: data: /images/IMG_20170914_100039.jpg
+image: /images/IMG_20170914_100039.jpg
 ---
 <!-- splash -->
 
