--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@ title: home
 entries_layout: list
 image: /images/IMG_20170914_100039.jpg
 ---
-<!-- splash -->
-
-{% include page-image.html %}
+<!-- splash included by default as is given above -->
 
 <!-- Latest Work -->
 <body>
