--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@ image: /images/IMG_20170914_100039.jpg
 <!-- Latest Work -->
 <body>
 <h2 class="taxonomy-title">Latest Work</h2>
-	<p>Supporting the fantastical with a nugget of scientific truth, leading readers into a world where anything's possible..</p>
 	<div class="entries-{{ page.entries_layout | default: 'list' }}">
-	  {%- for entry in site.tags.sample -%}
-	    	{% if entry.tags contains "ficsci" limit:1 %}
+	  {%- for entry in site.tags.work limit:1 -%}
                    {% include entry.html %}
 		{% endif %}
 	  {% endfor %}
@@ -23,8 +21,7 @@ image: /images/IMG_20170914_100039.jpg
 <h2 class="taxonomy-title">Latest Blog</h2>
 	<p>Engaging all ages with science - shining a light on cutting-edge research and bringing it to within reach, where it should be.</p>
 	<div class="entries-{{ page.entries_layout | default: 'list' }}">
-	  {% for entry in site.tags.sample %}
-	    	{% if entry.tags contains "scicomm" %}
+	  {% for entry in site.tags.blog limit:1 %}
 	            {% include entry.html %}
 	        {% endif %}
 	  {% endfor %}
