--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ image: /images/IMG_20170914_100039.jpg
 <body>
 <h2 class="taxonomy-title">Latest Work</h2>
 	<div class="entries-{{ page.entries_layout | default: 'list' }}">
-	  {%- for entry in site.tags.work limit:1 offset:1 -%}
+	  {%- for entry in site.tags.work offset:1 limit:1 -%}
                    {% include entry.html %}
 		{% endif %}
 	  {% endfor %}
@@ -20,7 +20,7 @@ image: /images/IMG_20170914_100039.jpg
 <!-- latest blog -->
 <h2 class="taxonomy-title">Latest Blog</h2>
 	<div class="entries-{{ page.entries_layout | default: 'list' }}">
-	  {% for entry in site.tags.blog limit:1 offset:1 %}
+	  {% for entry in site.tags.blog offset:1 limit:1 %}
 	            {% include entry.html %}
 	        {% endif %}
 	  {% endfor %}
