--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 ---
 layout: collection
-title: home
 entries_layout: list
 image: /images/10386924_10152441278681100_1716011058682028476_o.jpg
 ---
 <!-- splash included by default as is given above -->
 
 <!-- Latest Work -->
-<body>
+<body><br>
 <h2 class="taxonomy-title">Latest Work</h2>
 	<div class="entries-{{ page.entries_layout | default: 'list' }}">
 	  {%- for entry in site.tags.work offset:1 limit:1 -%}
