--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,7 +6,7 @@ entries_layout: grid
 
 <body>
 <h2 class="taxonomy-title">Fictional Science</h2>
-	<p>Supporting the fantastical with a nugget of scientific truth, leading readers into a world where anything's possible..</p>
+	<p>Supporting the fantastical with a nugget of scientific truth, leading readers into a world where anything's possible...</p>
 	<div class="entries-{{ page.entries_layout | default: 'list' }}">
 	  {%- for entry in site.tags.sample -%}
 	    	{% if entry.tags contains "ficsci" %}
@@ -16,7 +16,7 @@ entries_layout: grid
 	</div>
 
 <h2 class="taxonomy-title">Science Communication</h2>
-	<p>Engaging all ages with science - shining a light on cutting-edge research and bringing it to within reach, where it should be.</p>
+	<p>Engaging all ages with science - shining a light on cutting-edge research and bringing it to within reach.</p>
 	<div class="entries-{{ page.entries_layout | default: 'list' }}">
 	  {% for entry in site.tags.sample %}
 	    	{% if entry.tags contains "scicomm" %}
