--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,7 +9,7 @@ entries_layout: grid
 	<p>Supporting the fantastical with a nugget of scientific truth, leading readers into a world where anything's possible...</p>
 	<div class="entries-{{ page.entries_layout | default: 'list' }}">
 	  {%- for entry in site.tags.sample -%}
-	    	{% if entry.tags contains "ficsci" %}
+	    	{% if entry.tags contains "fi-sci" %}
                    {% include entry.html %}
 		{% endif %}
 	  {% endfor %}
