--- a/about/index.html
+++ b/about/index.html
@@ -27,7 +27,7 @@ title: About
 </p>
 
 <p>
-  Her education and work has taken her from an undergraduate in theoretical physics (with a final-year project in the social sciences), a Ph.D. in astronomy then to postdoctoral work in neuroscience. With this background she found a deep appreciation of scientific research of all types. 
+  Her education and work has taken her through an undergraduate in theoretical physics (with a final-year project in the social sciences), a Ph.D. in astronomy then to postdoctoral work in neuroscience. With this background she found a deep appreciation of scientific research of all types, waving the flag for cross-disciplinary collaborations. 
 </p>
 <p>
   It was during her Ph.D. she discovered the best fun to be had was teaching and showcasing research to the young and old, science dabblers and 'nerds' alike. She kept an astronomy blog about her research, attended numerous school and local events and participated as a creative writer in the "Hogwarts is Here" Harry Potter online community project. From there she's gone on to speak at Soapbox Science, write and illustrate "Groundbreaking Science: The Guide to Ki" - a "how-to" fan textbook for Dragon Ball, and draw companion pieces for fellow scientists' publications.
