--- a/about/index.html
+++ b/about/index.html
@@ -9,26 +9,26 @@ title: About
 </div>
 
 <p>
-  A trained scientist with an interdisciplinary background in physics, astronomy and neuroscience, Lottie discovered her appetite for science in sci-fi and fantasy, and thus knows first-hand the immense value these genres play in igniting public curiosity about research of all kinds.
+  A trained scientist with an interdisciplinary background, Lottie discovered her appetite for science in sci-fi and fantasy, and thus knows first-hand the immense value these genres play in igniting public curiosity about research of all kinds.
 </p>
 
 <p>
-  Outside of more typical public engagement initiatives, she enjoys weaving together real and invented science to create immersive works that can both introduce complex scientific theories and extend them into the fantastical. The blurrier the line the better. She calls this 'fictional science'.
+  Outside of more typical public engagement initiatives, she enjoys weaving together real and invented science to create immersive works that can both introduce complex scientific theories and extend them into the fantastical - the blurrier that line the better. She calls this for-fun pseudo-science 'fictional science', and fields questions from readers wanting to know more about the underlying research (which is more often than not stranger than the fiction!).
 </p>
 
 <p>
-  From fantastical 'how-to' textbooks to blogging real research trips, Lottie takes a cross-media approach to sating the curiosity of her readers and followers across all skill levels.
+  From fantastical 'how-to' textbooks to blogging real research trips, Lottie takes a cross-media approach to sating the curiosity of her readers and followers, whatever their skill level.
 </p>
 
 <h3>Background</h3>
 
 <p>  
-  Growing up Lottie found in-Universe texts or stories with scientific or historical truth behind their world-building the most engaging; e.g. "Fantastic Beasts and Where to Find Them" and "Quidditch Through the Ages" by JK Rowling, the "His Dark Materials" series by Philip Pullman, the "Hitchhiker's Guide to the Galaxy" by Douglas Adams, "The Handmaid's Tale" by Margaret Atwood and "Watership Down" by Richard Adams to name a few. These stories encouraged her both to pursue an education in science and to create her own worlds inspired by the established rules and cutting-edge research she was immersed in.
+  Growing up Lottie found in-Universe texts or stories with scientific or historical truth behind their world-building the most engaging; e.g. "Fantastic Beasts and Where to Find Them" and "Quidditch Through the Ages" by JK Rowling, the "His Dark Materials" series by Philip Pullman, "The Hitchhiker's Guide to the Galaxy" by Douglas Adams, "The Handmaid's Tale" by Margaret Atwood and "Watership Down" by Richard Adams to name a few. These stories encouraged her both to pursue an education in science and to create her own worlds inspired by the established rules and cutting-edge research she was immersed in.
 </p>
 
 <p>
-  Her education and work has taken her through an undergraduate in theoretical physics (with a final-year project in the social sciences), a Ph.D. in astronomy then to postdoctoral work in neuroscience. With this background she found a deep appreciation of scientific research of all types, waving the flag for cross-disciplinary collaborations. 
+  Her education and work has taken her through an undergraduate in theoretical physics (with a final-year project in the social sciences), a Ph.D. in astronomy then to postdoctoral work in neuroscience. With this simultaneously broad and comprehensive background she found a deep appreciation of scientific research of all types and the commonalities between them, and waves the flag for cross-disciplinary collaboration. 
 </p>
 <p>
-  It was during her Ph.D. she discovered the best fun to be had was teaching and showcasing research to the young and old, science dabblers and 'nerds' alike. She kept an astronomy blog about her research, attended numerous school and local events and participated as a creative writer in the "Hogwarts is Here" Harry Potter online community project. From there she's gone on to speak at Soapbox Science, write and illustrate "Groundbreaking Science: The Guide to Ki" - a "how-to" fan textbook for Dragon Ball, and draw companion pieces for fellow scientists' publications.
+  It was during her Ph.D. she discovered the best fun to be had was teaching and showcasing research to the young and old, science dabblers and 'nerds' alike. She kept an astronomy blog about her research, attended numerous school and local events and participated as a creative writer in the "Hogwarts is Here" Harry Potter online community project, writing a magical textbook on astronomy. From there she's gone on to speak at Soapbox Science about life as a multidisciplinary scientist, solo write and illustrate "Groundbreaking Science: The Guide to Ki" - a fan textbook for Dragon Ball explaining superpowers, and draw companion pieces for fellow scientists' publications for press releases.
 </p>
