--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,6 +7,7 @@ entries_layout: grid
 <body>
 <h2 class="taxonomy-title">Fictional Science</h2>
 	<p>Supporting the fantastical with a nugget of scientific truth, leading readers into a world where anything's possible...</p>
+	<div><img src="https://78.media.tumblr.com/fc399fee2ed8ace42a7ac630687f8237/tumblr_inline_osa4cyEyqV1uaucxv_500.png" /></div>
 	<div class="entries-{{ page.entries_layout | default: 'list' }}">
 	  {%- for entry in site.tags.sample -%}
 	    	{% if entry.tags contains "fi-sci" %}
