--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,7 +19,7 @@ entries_layout: grid
 
 <h2 class="taxonomy-title">Science Communication</h2>
 	<p>Engaging all ages with science - shining a light on cutting-edge research and bringing it to within reach.</p>
-	<img src="/images/20414233_10159068400170035_3757666610043580630_o.jpg" class="align-center" alt="">
+	<img src="/images/20414233_10159068400170035_3757666610043580630_o.jpg" class="align-center" alt="" width: 50%>
 	<div class="entries-{{ page.entries_layout | default: 'list' }}">
 	  {% for entry in site.tags.sample %}
 	    	{% if entry.tags contains "scicomm" %}
