Adding an about to homepage

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@ image: /images/10386924_10152441278681100_1716011058682028476_o.jpg
 
 <!-- Latest Work -->
 <body><br>
+	<h2 class="taxonomy-title">About</h2>
+	<div class="blurb">
+		<p>
+			Lottie is a writer and illustrator with science communication firmly at the heart of her work.
+		</p>
+	</div>
+	
+	<p>
+		A trained scientist with an interdisciplinary background, Lottie discovered her appetite for science in sci-fi and fantasy, and thus knows first-hand the immense value these genres play in igniting public curiosity about research of all kinds.
+	</p>
+	
+	<p>
+		From fantastical 'how-to' textbooks to blogging real research trips, Lottie takes a cross-media approach to sating the curiosity of her readers and followers, whatever their skill level.
+	</p>
+
+	<br>
 <h2 class="taxonomy-title">Latest Work</h2>
 	<div class="entries-{{ page.entries_layout | default: 'list' }}">
 	  {%- for entry in site.tags.work offset:0 limit:1 -%}
