adding in about the commissions to the about page

--- a/about/index.html
+++ b/about/index.html
@@ -17,7 +17,7 @@ title: About
 </p>
 
 <p>
-  From fantastical 'how-to' textbooks to blogging real research trips, Lottie takes a cross-media approach to sating the curiosity of her readers and followers, whatever their skill level.
+  From fantastical 'how-to' textbooks to blogging real research trips and commissioned scientific illustrations, Lottie takes a cross-media approach to sating the curiosity of her readers and followers, whatever their skill level.
 </p>
 
 <h3>Background</h3>
