--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ image: /images/10386924_10152441278681100_1716011058682028476_o.jpg
 	</p>
 	
 	<p>
-		From fantastical 'how-to' textbooks to blogging real research trips, Lottie takes a cross-media approach to sating the curiosity of her readers and followers, whatever their skill level.
+		From fantastical 'how-to' textbooks to blogging real research trips and commissioned scientific illustrations, Lottie takes a cross-media approach to sating the curiosity of her readers and followers, whatever their skill level.
 	</p>
 
 	<br>
