--- a/about/index.html
+++ b/about/index.html
@@ -32,3 +32,10 @@ title: About
 <p>
   It was during her Ph.D. she discovered the best fun to be had was teaching and showcasing research to the young and old, science dabblers and 'nerds' alike. She kept an astronomy blog about her research, attended numerous school and local events and participated as a creative writer in the "Hogwarts is Here" Harry Potter online community project, writing a magical textbook on astronomy. From there she's gone on to speak at Soapbox Science about life as a multidisciplinary scientist, solo write and illustrate "Groundbreaking Science: The Guide to Ki" - a fan textbook for Dragon Ball explaining superpowers, and draw companion pieces for fellow scientists' publications for press releases.
 </p>
+
+<h3>
+  Commissions
+</h3>
+<p>
+  If you like the work in my <a href="../portfolio/index.html">portfolio</a> and would like to commission your own piece, please contact me through "Lottie AT lottieclarkesci.com". Let me know what you're thinking, and I can give you a quote. Journal cover candidates and similar images take a minimum of two weeks (to ensure we have ample time to talk and review progress) so please ensure there is enough time before the art submission deadline for us to work together! In the meantime feel free to read through my <a href="../images/lottie_clarke_sci_cover_art_info.pdf"></a>cover commissions FAQ</a> to get a handle on the process. Thank you!
+</p>
