removing fake brace

--- a/about/index.html
+++ b/about/index.html
@@ -37,5 +37,5 @@ title: About
   Commissions
 </h3>
 <p>
-  If you like the work in my <a href="../portfolio/index.html">portfolio</a> and would like to commission your own piece, please contact me through "Lottie AT lottieclarkesci.com". Let me know what you're thinking, and I can give you a quote. Journal cover candidates and similar images take a minimum of two weeks (to ensure we have ample time to talk and review progress) so please ensure there is enough time before the art submission deadline for us to work together! In the meantime feel free to read through my <a href="../images/lottie_clarke_sci_cover_art_info.pdf"></a>cover commissions FAQ</a> to get a handle on the process. Thank you!
+  If you like the work in my <a href="../portfolio/index.html">portfolio</a> and would like to commission your own piece, please contact me through "Lottie AT lottieclarkesci.com". Let me know what you're thinking, and I can give you a quote. Journal cover candidates and similar images take a minimum of two weeks (to ensure we have ample time to talk and review progress) so please ensure there is enough time before the art submission deadline for us to work together! In the meantime feel free to read through my <a href="../images/lottie_clarke_sci_cover_art_info.pdf">cover commissions FAQ</a> to get a handle on the process. Thank you!
 </p>
