--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ image: /images/10386924_10152441278681100_1716011058682028476_o.jpg
 	</div>
 	
 	<p>
-		A trained scientist with an interdisciplinary background, Lottie discovered her appetite for science in sci-fi and fantasy, and thus knows first-hand the immense value these genres play in igniting public curiosity about research of all kinds.
+		A trained scientist with an interdisciplinary background, Lottie discovered her appetite for science in sci-fi and fantasy. She has first-hand experience of the immense value these genres play in igniting public curiosity about research of all kinds.
 	</p>
 	
 	<p>
