--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@ title: About
 </div>
 
 <p>
-  A trained scientist with an interdisciplinary background, Lottie discovered her appetite for science in sci-fi and fantasy, and thus knows first-hand the immense value these genres play in igniting public curiosity about research of all kinds.
+  A trained scientist with an interdisciplinary background, Lottie discovered her appetite for science in sci-fi and fantasy. She has first-hand experience of the immense value these genres play in igniting public curiosity about research of all kinds.
 </p>
 
 <p>
